src/main/java/com/example/signalbackend/global/error/ErrorResponse.java
package com.example.signalbackend.global.error;

import lombok.Builder;
import lombok.Getter;

@Builder
@Getter
public class ErrorResponse {
    private final int status;
    private final String code;
    private final String message;

    ErrorResponse(int status, String code, String message) {
        this.status = status;
        this.code = code;
        this.message = message;
    }
}
